<resources>
    <string name="app_name">Shopping Demo</string>
    <string name="robot_url">https://searchtest-drcn.dt.dbankcloud.com/assistant/#/?locale=en</string>
    <string name="product_file_path">products</string>
    <string name="title_home">Home</string>
    <string name="title_catalogue">Categories</string>
    <string name="title_new_in">New In</string>
    <string name="sys_integrity_detecting">Detecting...</string>
    <string name="sys_integrity_detect_success">System integrity is OK</string>
    <string name="welcome">Welcome</string>
    <string name="first_press_back">Press again to exit</string>
    <string name="notice">test</string>
    <string name="used_kits">The following kits are used here:</string>
    <string name="cancel_saved">Favorite removed.</string>
    <string name="saved_success">Favorite Added.</string>
    <string name="accountkit_name">Account Kit</string>
    <string name="account_link">https://developer.huawei.com/consumer/en/hms/huawei-accountkit?ha_source=hms7</string>
    <string name="account_login">One-click Sign-in</string>
    <string name="map_location">Location Kit&amp;Map Kit</string>
    <string name="map_location_link">https://developer.huawei.com/consumer/en/hms/huawei-MapKit?ha_source=hms7</string>
    <string name="offline_store">Offline Store Search</string>
    <string name="mapkit_name">Map Kit</string>
    <string name="map_link">https://developer.huawei.com/consumer/en/hms/huawei-MapKit?ha_source=hms7</string>
    <string name="map_map">Global Map shown</string>
    <string name="identity_name">Identity Kit</string>
    <string name="identity_link">https://developer.huawei.com/consumer/en/hms/huawei-identitykit?ha_source=hms7</string>
    <string name="identity_address">Address Selection</string>
    <string name="mlkit_name">ML Kit</string>
    <string name="ml_link">https://developer.huawei.com/consumer/en/hms/huawei-mlkit?ha_source=hms7</string>
    <string name="ml_photo">Product Visual Search</string>
    <string name="ml_asr">ASR</string>
    <string name="ml_translate">Translation</string>
    <string name="ml_bankcard">Bank Card Recognition</string>
    <string name="analytics_name">Analytics Kit</string>
    <string name="analytics_link">https://developer.huawei.com/consumer/en/hms/huawei-analyticskit?ha_source=hms7</string>
    <string name="analytics_report">Analytics Report</string>
    <string name="arkit_name">AR Engine</string>
    <string name="ar_link">https://developer.huawei.com/consumer/en/hms/huawei-arengine?ha_source=hms7</string>
    <string name="ar_reality">AR Try-On</string>
    <string name="location_name">Location Kit</string>
    <string name="location_link">https://developer.huawei.com/consumer/en/hms/huawei-locationkit?ha_source=hms7</string>
    <string name="location_geo">GeoFence</string>
    <string name="location_lbs">LBS</string>
    <string name="site_name">Site Kit</string>
    <string name="site_link">https://developer.huawei.com/consumer/en/hms/huawei-sitekit?ha_source=hms7</string>
    <string name="site_geo">Address autocomplete</string>
    <string name="push_name">Push Kit</string>
    <string name="push_link">https://developer.huawei.com/consumer/en/hms/huawei-pushkit?ha_source=hms7</string>
    <string name="push_message">Message Push</string>
    <string name="subscribe_message">Subscription/Favorite item Message</string>
    <string name="order_delivery">Order Status/Logistics Message</string>
    <string name="bag_message">Shopping Bag Event Message</string>
    <string name="discount_message">Discount/New Products Message</string>
    <string name="geo_message">Geofence Message</string>
    <string name="scan_name">Scan Kit</string>
    <string name="scan_link">https://developer.huawei.com/consumer/en/hms/huawei-scankit?ha_source=hms7</string>
    <string name="scan_pay">Scan Pay</string>
    <string name="scan_code">Membership Code Generation</string>
    <string name="scan_shopping">Scan Shopping</string>
    <string name="video_name">Video Kit</string>
    <string name="video_link">https://developer.huawei.com/consmer/en/hms/huawei-videokit?ha_source=hms7</string>
    <string name="video_play">Video Display</string>
    <string name="scene_name">Scene Kit</string>
    <string name="scene_link">https://developer.huawei.com/consumer/en/hms/huawei-scenekit?ha_source=hms7</string>
    <string name="display_3d">3D Commodity Display</string>
    <string name="iap_name">In-App Purchases</string>
    <string name="iap_link">https://developer.huawei.com/consumer/en/hms/huawei-iap?ha_source=hms7</string>
    <string name="member_purchase">Members Purchase</string>
    <string name="safety_name">Safety Detect</string>
    <string name="safety_link">https://developer.huawei.com/consumer/en/hms/huawei-safetydetectkit?ha_source=hms7</string>
    <string name="system_integrate">System integrity</string>
    <string name="caas_name">Caas Engine</string>
    <string name="caas_link">https://developer.huawei.com/consumer/en/caas-kit?ha_source=hms7</string>
    <string name="screen_share">Screen Sharing</string>
    <string name="search_name">Search Kit</string>
    <string name="search_link">https://developer.huawei.com/consumer/en/hms/huawei-searchkit?ha_source=hms7</string>
    <string name="mobile_search">Smart Assistant Services</string>
    <string name="network_name">Network Kit</string>
    <string name="network_link">https://developer.huawei.com/consumer/en/hms/huawei-networkkit?ha_source=hms7</string>
    <string name="good_connection">High Quality Connection</string>
    <string name="shopping_bag_title">Bag</string>
    <string name="product_detail">%s %s %s</string>
    <string name="product_count_type_1">X%d</string>
    <string name="shopping_cart_edit">Edit</string>
    <string name="shopping_cart_finish">Finish</string>
    <string name="shopping_cart_price">¥ %d</string>
    <string name="shopping_cart_reduce_notice">One Item At Least!</string>
    <string name="shopping_cart_select_all">Select All</string>
    <string name="shopping_cart_pay">Check Out(%d)</string>
    <string name="shopping_cart_total">Total: ¥</string>
    <string name="shopping_cart_delete">Delete</string>
    <string name="shopping_cart_confirm_delete">Do you confirm to Delete?</string>
    <string name="shopping_cart_item_example_product_name">HUAWEI</string>
    <string name="shopping_cart_item_example_quantity">1</string>
    <string name="shopping_cart_item_example_config">8GB+256GB,5G All 8GB+256GB, White</string>
    <string name="shopping_shipping">Ship free</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="tip_sign_in_first">Please login first</string>
    <string name="map_location_des">Accurate access to the location of users and offline store with the combination of location and map services helps online users reach offline store quickly.</string>
    <string name="ml_translation_des">The device side supports 12 languages, and the cloud side supports translations in 21 languages, with low latency and BLEU of 32.44. Solve the translation of product details, customer reviews, community sharing and other content for cross-language e-commerce apps.</string>
    <string name="location_geo_des">Push messages based on the status of users entering, staying, and leaving a certain district/consumption location, helping O2O merchants to accurately appeal users, and promote consumption both online and offline.</string>
    <string name="location_lbs_des">Accurate access to the location of users and offline store with the combination of location and map services helps online users reach offline store quickly.</string>
    <string name="account_login_des">One-click sign-in capability help users sign HUAWEI ID into e-commerce App without manual login or verification.</string>
    <string name="iap_sub_des">In-App Purchases support subscription and membership purchase experience with multi-language, multi-product, multi-payment methods, etc.</string>
    <string name="ar_engine_reality_des">AR Engine integrates virtual and reality to realize online try-on, create an immersive shopping experience, enhance the fun of online shopping and promote consumption.</string>
    <string name="video_play_des">The video service supports smoother HD video playback, allowing users to fully know the product in a more scene-oriented experience.</string>
    <string name="ml_photo_des">Product Visual Search service in e-commerce App provides the image-based product detection, identification, and recommendation function, helping users quickly find the products they want and promote consumption. （ML Kit can be integrated into both Android and iOS apps.）</string>
    <string name="ads_des">Get more revenue from in-app advertising with traffic monetization services.</string>
    <string name="scene_3d_des">Scene Kit helps to display high-quality 3D models of products in the e-commerce app, and brings users an exquisite product display visual experience.</string>
    <string name="caas_share_des">Users can share their screens and discuss products with friends while shopping online, realizing "cloud shopping".</string>
    <string name="push_notify_des">The timely and accurate message push service helps applications reach users precisely and improve user experience.</string>
    <string name="push_sub_des">The push messages triggered by users through subscription and favorite items and other actions accurately reaches the users, optimizing the operation work and promoting consumption.</string>
    <string name="order_center_pending_payment_time">Need2Pay</string>
    <string name="order_center_order_number">Order Number: %d</string>
    <string name="order_center_total">%d Offerings in total, Need: ¥ %d</string>
    <string name="order_center_go_to_pay">Pay</string>
    <string name="order_center_modify_order">Modify</string>
    <string name="order_center_cancel_order">Cancel</string>
    <string name="confirm_button">OK</string>
    <string name="radius_number">Radius:</string>
    <string name="latitude_number">Latitude:</string>
    <string name="longitude_number">Longitude:</string>
    <string name="geofence_enabled">The Geo Fence is enabled Successfully</string>
    <string name="id">id:</string>
    <string name="product_price">¥ %d</string>
    <string name="payment_need_total">￥ %d</string>
    <string name="payment_succeed">Payment Successfully!</string>
    <string name="payment_thanks">Thank you for your purchase</string>
    <string name="view_order">View Order</string>
    <string name="back_to_home">Back to Home</string>
    <string name="bank_card_payment">Bank card payment</string>
    <string name="order_succeed">Order placed successfully and will be shipped soon</string>
    <string name="order_number">Order Number :</string>
    <string name="order_time">Submit Time :</string>
    <string name="payment_type">Payment Type :</string>
    <string name="order_status">Order Status : </string>
    <string name="product_discount">¥%d off</string>
    <string name="subscribe">+Follow</string>
    <string name="countdown">Coming soon</string>
    <string name="rating">Rating</string>
    <string name="submit">Submit</string>
    <string name="feedback_content">Please enter your comments</string>
    <string name="question1">Q1.Please let us know your feedback about this Demo, whether it is helpful ?</string>
    <string name="question2">Q2. Any suggestions are greatly appreciated.</string>
    <string name="question3">Q3. Are you satisfied with our demo ?</string>
    <string name="skip_in">Skip in %d</string>
    <string name="splash_des1">Use Sparkle Online Store to\ndiscover your inspiration with</string>
    <string name="splash_des2">HUAWEI Mobile Services!</string>
    <string name="splash_des4">HMS Core E-Commerce Solution Demo App</string>
</resources>