<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/geofence_enabled"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/id"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/id"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text=" ："
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/longitude_number"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/lon"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text=" ："
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/latitude_number"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/lan"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text=" ："
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/radius_number"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/r"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text=" ："
            android:textColor="@color/white" />
    </LinearLayout>

    <TextView
        android:id="@+id/sure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:onClick="onClick"
        android:padding="10dp"
        android:text="@string/confirm_button"
        android:textColor="@color/white" />
</LinearLayout>