<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) Huawei Technologies Co., Ltd. 2019-2020. All rights reserved.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    
    <RelativeLayout
            android:id="@+id/layout_order_info"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_vertical">
        <TextView
                android:id="@+id/text_order_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/order_center_order_number"/>
        
        <TextView
                android:id="@+id/text_pending_payment_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="20dp"
                android:text="@string/order_center_pending_payment_time"/>
        
    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/item_list_order"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    
    <TextView
            android:id="@+id/text_product_total_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:layout_marginEnd="20dp"
            android:text="@string/order_center_total"/>
    
    <RelativeLayout
            android:id="@+id/order_operation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">

        <TextView
                android:id="@+id/textView_pay_order"
                android:layout_width="80dp"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_alignParentEnd="true"
                android:background="@drawable/textview_radius"
                android:gravity="center"
                android:text="@string/order_center_go_to_pay"
                android:textColor="@color/white"/>

        <TextView
                android:id="@+id/textView_modify_order"
                android:layout_width="80dp"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_toStartOf="@+id/textView_pay_order"
                android:background="@drawable/textview_border_shape"
                android:gravity="center"
                android:text="@string/order_center_modify_order"
                android:textColor="@color/black"/>

        <TextView
                android:id="@+id/textView_cancel_order"
                android:layout_width="80dp"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_toStartOf="@+id/textView_modify_order"
                android:background="@drawable/textview_border_shape"
                android:gravity="center"
                android:text="@string/order_center_cancel_order"
                android:textColor="@color/black"/>
        
    </RelativeLayout>

    <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="5dp" />

</LinearLayout>  