<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".page.FeedbackActivity">

    <include
        android:id="@+id/feedback_title"
        layout="@layout/title_page" />

    <TextView
        android:id="@+id/question1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/feedback_title"
        android:padding="20dp"
        android:text="@string/question1"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/feedback_content1"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_below="@id/question1"
        android:layout_marginHorizontal="20dp"
        android:background="#F8F8F8"
        android:gravity="top"
        android:hint="@string/feedback_content"
        android:maxLength="1000"
        android:minLines="10"
        android:padding="20dp"
        android:text="" />

    <TextView
        android:id="@+id/question2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/feedback_content1"
        android:padding="20dp"
        android:text="@string/question2"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/feedback_content2"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_below="@id/question2"
        android:layout_marginHorizontal="20dp"
        android:background="#F8F8F8"
        android:gravity="top"
        android:hint="@string/feedback_content"
        android:maxLength="1000"
        android:minLines="10"
        android:padding="20dp"
        android:text="" />

    <TextView
        android:id="@+id/question3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/feedback_content2"
        android:padding="20dp"
        android:text="@string/question3"
        android:textSize="18sp" />

    <LinearLayout
        android:id="@+id/rating"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/question3"
        android:layout_marginHorizontal="20dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rating"
            android:textSize="18sp" />

        <RatingBar
            android:id="@+id/ratingBar"
            style="@style/myRatingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:isIndicator="false"
            android:numStars="5"
            android:rating="0"
            android:stepSize="0.5" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rating"
            android:textSize="18sp"
            android:visibility="invisible" />
    </LinearLayout>

    <Button
        android:id="@+id/submit"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_margin="40dp"
        android:background="@drawable/background_check_out"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:textSize="20sp" />

</RelativeLayout>