<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) Huawei Technologies Co., Ltd. 2019-2020. All rights reserved.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:layout_width="match_parent"
        android:layout_height="330dp"
        android:background="@drawable/payment_succeed_bgd" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <include layout="@layout/title_product" />

        <RelativeLayout
            android:id="@+id/succeed_rl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="68dp"
            android:layout_marginBottom="68dp">

            <ImageView
                android:id="@+id/succeed_icon"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/icon_payment_succeed" />

            <TextView
                android:id="@+id/succeed_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginTop="2dp"
                android:layout_toEndOf="@id/succeed_icon"
                android:gravity="center"
                android:text="@string/payment_succeed"
                android:textColor="@color/payment_succeed_text1"
                android:textSize="28sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/succeed_text"
                android:layout_alignBottom="@id/succeed_icon"
                android:layout_marginStart="18dp"
                android:layout_marginBottom="2dp"
                android:layout_toEndOf="@id/succeed_icon"
                android:gravity="center"
                android:text="@string/payment_thanks"
                android:textColor="@color/payment_succeed_text1"
                android:textSize="21sp" />

        </RelativeLayout>

        <TextView
            android:id="@+id/payment_total"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="18dp"
            android:background="@color/white"
            android:gravity="center"
            android:paddingTop="30dp"
            android:paddingBottom="10dp"
            android:text="@string/payment_need_total"
            android:textColor="@color/payment_succeed_text2"
            android:textSize="50sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="18dp"
            android:background="@drawable/payment_succeed_line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="18dp"
            android:background="@color/white"
            android:orientation="horizontal"
            android:paddingLeft="32dp"
            android:paddingTop="30dp">

            <TextView
                style="@style/paymentSucceedText1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/order_number" />

            <TextView
                android:id="@+id/order_number"
                style="@style/paymentSucceedText2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="999999999" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="18dp"
            android:background="@color/white"
            android:orientation="horizontal"
            android:paddingLeft="32dp"
            android:paddingTop="16dp">

            <TextView
                style="@style/paymentSucceedText1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/order_time" />

            <TextView
                android:id="@+id/order_time"
                style="@style/paymentSucceedText2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="2021-04-22 16:05:00" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="18dp"
            android:background="@color/white"
            android:orientation="horizontal"
            android:paddingLeft="32dp"
            android:paddingTop="16dp">

            <TextView
                style="@style/paymentSucceedText1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/payment_type" />

            <TextView
                android:id="@+id/payment_type"
                style="@style/paymentSucceedText2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bank_card_payment" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="18dp"
            android:background="@color/white"
            android:orientation="horizontal"
            android:paddingLeft="32dp"
            android:paddingTop="16dp"
            android:paddingBottom="36dp">

            <TextView
                style="@style/paymentSucceedText1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/order_status" />

            <TextView
                style="@style/paymentSucceedText2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/order_succeed" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginEnd="64dp"
            android:layout_marginBottom="64dp"
            android:layout_weight="1"
            android:gravity="bottom"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/view_order"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@drawable/button_start_bgd"
                android:gravity="center"
                android:text="@string/view_order"
                android:textColor="@color/payment_select_text4"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/back_to_home"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@drawable/button_end_bgd"
                android:gravity="center"
                android:text="@string/back_to_home"
                android:textColor="@color/background_button_default"
                android:textSize="15sp" />
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>