<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) Huawei Technologies Co., Ltd. 2019-2021. All rights reserved.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_background_newin"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp">

    <ImageView
        android:id="@+id/iv_product"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginEnd="5dp"
        android:scaleType="fitCenter"
        android:src="@mipmap/fronts_phonesample1" />

    <TextView
        android:id="@+id/tv_product_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="3dp"
        android:singleLine="true"
        android:text="HUAWEI Mobile Sample 1"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_countdown"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="3dp"
        android:text="@string/countdown"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tv_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/product_price"
        android:textColor="#E9480E"
        android:textSize="20sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_discount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/tv_product_subscribe"
            android:text="@string/product_discount"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_product_subscribe"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:background="@drawable/background_check_out"
            android:gravity="center"
            android:padding="2dp"
            android:text="@string/subscribe"
            android:textColor="@color/white"
            android:textSize="12sp" />
    </RelativeLayout>

</LinearLayout>